--- a/app/view/amusement/detail.phtml
+++ b/app/view/amusement/detail.phtml
@@ -1,8 +1,9 @@
+<?php $info = $this->viewData["detail"][0]?>
 <div class="amusement-item-title">
 	<i class="fas fa-star star-one"></i>
 	<i class="fas fa-star star-two"></i>
 	<i class="fas fa-star star-three"></i>
-	<h1>Les Tasses spinning cans</h1>
+        <h1><?= $info["name"]?></h1>
 	<i class="fas fa-star star-three"></i>
 	<i class="fas fa-star star-two"></i>
 	<i class="fas fa-star star-one"></i>	
@@ -14,13 +15,13 @@
 				<div id="carousel" class="carousel slide" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img class="d-block w-100" src="img/item1.jpg" >
+                                        <img class="d-block w-100" src="/mywebsite.com/public/image/amusement/<?= $info["urlName"] ?>/1.jpg" >
 				    </div>
 				    <div class="carousel-item">
-				      <img class="d-block w-100" src="img/item2.jpg" >
+				      <img class="d-block w-100" src="/mywebsite.com/public/image/amusement/<?= $info["urlName"] ?>/2.jpg" >
 				    </div>
 				    <div class="carousel-item">
-				      <img class="d-block w-100" src="img/item3.jpg" >
+				      <img class="d-block w-100" src="/mywebsite.com/public/image/amusement/<?=$info["urlName"] ?>/3.jpg" >
 				    </div>
 				  </div>
 				  <div class="carousel-indicator">
@@ -37,10 +38,11 @@
 				</div>
 			</div>
 			<div class="col-md-5 col-12 amusement-item-text">
-				<p>Adventurers Club is in Plaça Tibidabo in front of the main entrance, serving a wide range of salads, tapas and sandwiches. It has a terrace, indoor dining room with air conditioning and Wi-Fi.</p>
-				<p><strong>Opening times:</strong> from 10am until the Park and/or Panorcamic Area closes.</p><br>
-				<p>Also, from 10.30 am to 11.30 am, enjoy its breakfast offer for only €3,50: toasted cheese and ham sandwich + coffee or coffee with milk (only available when the amusement park opens).</p>
-				<p>Nivell 6</p>
+                            <p><?= $info["description"] ?></p>
+                            <p><strong>Height restrictions</strong></p>
+                            <?php foreach(explode(",", $info["height"]) as $heights):?>
+                            <p><?= $heights ?></p>
+                            <?php endforeach; ?>
 			</div>
 		</div>
 	</div>
