--- a/app/view/home/index.phtml
+++ b/app/view/home/index.phtml
@@ -1,62 +1,38 @@
 <div id="lay-container">
     <div class="image-slider-wrapper">
                 <div class="image-slider-inner">
-                    <div class="image-slider-item">
-                        <picture>
-                            <source media="(max-width:601px)" srcset="img/me.jpg">
-                            <source media="(max-width:1025px)" srcset="http://unsplash.it/1024/768/?img=1000">
-                            <img src="http://unsplash.it/3440/1440/?img=1000">
-                        </picture>
+                    <div class="image-slider-item">                   
+                            <img src="/mywebsite.com/public/img/slider/1.jpg">
                         <div class="slider-caption">
-                            <p class="caption animated rotateIn ">Created by Do Trung Hieu</p>
+                            <p class="caption animated rotateIn ">Welcome to Mericano Amusement Park</p>
                         </div>
                     </div>
-                    <div class="image-slider-item">
-                        <picture>
-                            <source media="(max-width:601px)" srcset="http://unsplash.it/800/600/?img=1001">
-                            <source media="(max-width:1025px)" srcset="http://unsplash.it/1024/768/?img=1001">
-                            <img src="http://unsplash.it/3440/1440/?img=1001">
-                        </picture>
+                    <div class="image-slider-item">                          
+                            <img src="/mywebsite.com/public/img/slider/2.jpg">                       
                         <div class="slider-caption">
                             <p class="caption animated lightSpeedIn ">The Best Park In The World</p>
                         </div>
                     </div>
-                    <div class="image-slider-item">
-                        <picture>
-                            <source media="(max-width:601px)" srcset="http://unsplash.it/800/600/?img=1002">
-                            <source media="(max-width:1025px)" srcset="http://unsplash.it/1024/768/?img=1002">
-                            <img src="http://unsplash.it/3440/1440/?img=1002">
-                        </picture>
+                    <div class="image-slider-item">                    
+                            <img src="/mywebsite.com/public/img/slider/3.jpg">
                         <div class="slider-caption">
                             <p class="caption animated fadeInUp">Enjoy the ride !</p>
                         </div>
                     </div>
-                    <div class="image-slider-item">
-                        <picture>
-                            <source media="(max-width:601px)" srcset="http://unsplash.it/800/600/?img=1003">
-                            <source media="(max-width:1025px)" srcset="http://unsplash.it/1024/768/?img=1003">
-                            <img src="http://unsplash.it/3440/1440/?img=1003">
-                        </picture>
+                    <div class="image-slider-item">                     
+                            <img src="/mywebsite.com/public/img/slider/4.jpg">
                         <div class="slider-caption">
                             <p class="caption animated zoomIn  ">Experience of a lifetime</p>
                         </div>
                     </div>
-                    <div class="image-slider-item">
-                        <picture>
-                            <source media="(max-width:601px)" srcset="http://unsplash.it/800/600/?img=1004">
-                            <source media="(max-width:1025px)" srcset="http://unsplash.it/1024/768/?img=1004">
-                            <img src="http://unsplash.it/3440/1440/?img=1004">
-                        </picture>
+                    <div class="image-slider-item">                     
+                            <img src="/mywebsite.com/public/img/slider/5.jpg">
                         <div class="slider-caption">
                             <p class="caption animated bounceInDown">Available for all ages</p>
                         </div>
                     </div>
-                    <div class="image-slider-item">
-                        <picture>
-                            <source media="(max-width:601px)" srcset="http://unsplash.it/800/600/?img=1005">
-                            <source media="(max-width:1025px)" srcset="http://unsplash.it/1024/768/?img=1005">
-                            <img src="http://unsplash.it/3440/1440/?img=1005">
-                        </picture>
+                    <div class="image-slider-item">                        
+                            <img src="/mywebsite.com/public/img/slider/6.jpg">
                         <div class="slider-caption">
                             <p class="caption animated flipInX ">Memorable, Fun, and affordable </p>
                         </div>
@@ -195,4 +171,5 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
