--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1610,7 +1610,7 @@ li{
   width: 49px;
   position: absolute;
   content: "";
-  background: url(../images/ticket2.png) no-repeat;
+  background: url(../img/ticket2.png) no-repeat;
   top: 0;
   left: 50%;
   margin-top: -50px;
